--- a/MultiVariable_extreme_value.ipynb
+++ b/MultiVariable_extreme_value.ipynb
@@ -312,7 +312,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## Tétel (Sylvester kritérium). Legyen $A\\,$ $n\\times n$-es szimmetrikus mátrix, \n",
+        "## Tétel (Sylvester kritérium). \n",
+        "Legyen $A\\,$ $n\\times n$-es szimmetrikus mátrix, \n",
         "$$ \n",
         "A^{(k)}=\n",
         "\\left[\n",
