--- a/MultiVariable_extreme_value.ipynb
+++ b/MultiVariable_extreme_value.ipynb
@@ -330,7 +330,7 @@
         "Ekkor \n",
         "* $A\\,$ pozitív definit $\\Longleftrightarrow$ $\\Delta_1>0,\\,\\Delta_2>0,\\ldots,\\Delta_n>0$.\n",
         "* $A\\,$ negatív definit $\\Longleftrightarrow$ $(-1)^1\\Delta_1>0,\\,(-1)^2\\Delta_2>0,\\ldots,(-1)^n\\Delta_n>0$.\n",
-        "* $A\\,$ indefinit, ha az első $\\Delta_k$ amelyik az előző kettő előjel sorozatot elrontja, nem a megfelelő előjel.\n",
+        "* $A\\,$ indefinit, ha az első $\\Delta_k$ amelyik az előző kettő előjel sorozatot elrontja, nem a megfelelő előjelű.\n",
         "* $A\\,$ pozitív szemidefinit vagy negatív szemidefinit vagy indefinit, ha az első $\\Delta_k$ amelyik az előző kettő előjel sorozatot elrontja $0$.\n",
         "\n",
         "Megjegyzés 1. A tétel pontos.\n",
